--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@ $WhiteColor:#fff;
   
 }
 
-/*media query for lg screen*/
+/*media query for mobile screen*/
 @media screen and (max-width:480px) {
    
   .top-header .container{
@@ -73,6 +73,8 @@ $WhiteColor:#fff;
 
 }
 
+/* media query for tablet */
+ 
 
 /* css for banner section */
 
